# data-json-validation

./: .gitignore  LICENSE  Makefile  TAGS  data-json-validation.cabal  stack.yaml
app/: Main.hs
src/Data/Json/: Util.hs  Validation.hs  Visualization.hs
test/: Spec.hs
